force-app/main/default/src/objects/PJN_Enrollment_Wizard_Component__mdt/PJN_Enrollment_Wizard_Component__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Enrollment Wizard
Purpose: Define section title, type of component and its order within the Enrollment Wizard Step. This is step 3 in setting up the Enrollment Wizard.
Metadata Relationship(s): Enrollment Wizard Step; Enrollment Wizard Record Form; Enrollment Wizard Record List
Created by Mavens: Yes</description>
    <label>Enrollment Wizard Component</label>
    <pluralLabel>Enrollment Wizard Components</pluralLabel>
</CustomObject>