force-app/main/default/src/objects/PJN_Enrollment_Wizard_Component__mdt/fields/PJN_Component_To_Load__c.field-meta.xml
<CustomField>
    <fullName>PJN_Component_To_Load__c</fullName>
    <label>Component To Load</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>