force-app/main/default/src/objects/PJN_Enrollment_Wizard_Component__mdt/fields/PJN_Enrollment_Wizard_Step__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Wizard_Step__c</fullName>
    <label>Enrollment Wizard Step</label>
    <referenceTo>PJN_Enrollment_Wizard_Step__mdt</referenceTo>
    <relationshipLabel>Enrollment Wizard Components</relationshipLabel>
    <relationshipName>PJN_Enrollment_Wizard_Components</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>