force-app/main/default/src/objects/PJN_Enrollment_Wizard_Component__mdt/fields/PJN_Section_Title__c.field-meta.xml
<CustomField>
    <fullName>PJN_Section_Title__c</fullName>
    <description>The title for the section that this component creates.</description>
    <label>Section Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>