force-app/main/default/src/objects/PJN_Enrollment_Wizard_Component__mdt/listViews/PJN_All_Enrollment_Wizard_Components.listView-meta.xml
<ListView>
    <fullName>PJN_All_Enrollment_Wizard_Components</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Enrollment_Wizard_Step__c</columns>
    <columns>PJN_Section_Title__c</columns>
    <columns>PJN_Component_To_Load__c</columns>
    <columns>PJN_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enrollment Wizard Components</label>
    <language>en_US</language>
</ListView>